# chess_dashboard

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose-dashboard.yml  docker-compose-prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
chess_dagster/: .env.example  Dockerfile  Dockerfile_dagster  Dockerfile_user_code  Get Checkmate Pieces.ipynb  Makefile  Untitled.ipynb  Untitled1.ipynb  dagster.yaml  profiles.yml  pyproject.toml  setup.cfg  setup.py  test_centipawn.ipynb  workspace.yaml
chess_dagster/chess_dbt/: dbt_project.yml
chess_dagster/chess_dbt/models/: docs.md  schema.yml
chess_dagster/chess_dbt/models/mart/: games.sql  schema.yml
chess_dagster/chess_dbt/models/prep/: prep_game_moves.sql  (+11 more)
chess_dagster/chess_dbt/tests/: assert_checkmate_valid.sql  assert_no_checkmate_valid.sql
chess_dagster/chess_dbt/udf/: my_custom_functions.py
chess_dagster/chess_dlt/: __init__.py  data_contracts.py
chess_dagster/chess_dlt/.dlt/: config.toml
chess_dagster/chess_dlt/chess/: __init__.py  data_contracts.py
chess_dagster/chess_etl/: assets_dbt.py  assets_dlt.py  constants.py  definitions.py  resources.py
chess_dagster/chess_etl/assets/: asset_checks.py  chess_games.py  chess_source.py  constants.py  dbt_assets.py  dlt_assets.py
chess_dagster/chess_etl/resources/: __init__.py
chess_dagster/chess_etl_tests/: test_assets.py  test_defs.py
chess_dagster/dlt_sources/chess/: __init__.py  data_contracts.py
chess_dagster/tmpuetjoth3/history/: runs.db
chess_dagster/tmpuetjoth3/schedules/: schedules.db
(+61 files in other folders)
