[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "chess_dagster"
authors = [
  {name = "John Koh", email = "johnkohwd@gmail.com"},
]
description = "A simple ETL pipeline for chess data"
version = "0.1.0"
readme = "README.md"

requires-python = ">= 3.10"

dependencies = [
  "pydantic==2.9.2",
  "pydantic_core==2.23.4",
  "duckdb==1.1.3",
  "dagster==1.9.0",
  "dagster-webserver==1.9.0",
  "dagster-postgres==0.25.0",
  "dagster-embedded-elt==0.25.0",
  "dagster-dbt==0.25.0",
  "dlt[duckdb]==1.3.0",
  "dbt-duckdb==1.9.0",
  "python-chess==1.2.0",
  "pandas==2.2.3",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.2", 
  "jupyter==1.0.0", 
  "ruff==0.7.3", 
  "sqlfluff==3.2.5",
]

[tool.setuptools.packages.find]
exclude = ["chess_etl_tests"]


[tool.dagster]
module_name = "chess_etl.definitions"
code_location_name = "chess_etl"


[tool.ruff]
exclude = [
  ".git",
  "__pycache__",
  "old",
  "build",
  "dist",
]

line-length = 150
indent-width = 4

[tool.ruff.lint.per-file-ignores]
"./chess_etl/assets/prep/prep_game_moves.py" = ["W605", "F841"]
"./chess_etl/assets/prep/prep_player_games.py" = ["W605"]


[tool.sqlfluff.core]
templater = "jinja"
sql_file_exts = ".sql,.sql.j2,.dml,.ddl"
max_line_length = 100

[tool.sqlfluff.templater.jinja]
apply_dbt_builtins = true

[tool.sqlfluff.layout.type.comma]
line_position = "leading"